fixes jumpy isotope

--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -1203,4 +1203,6 @@ footer .credits {
 	background-color: transparent;
 }
 
-
+#projects {
+	transition: height 0.5s;
+}
